--- a/src/index.scss
+++ b/src/index.scss
@@ -103,11 +103,9 @@
 
 body {
   width: 100dvw;
-  min-width: 320px;
+  height: 100dvh;
   margin: 0;
   background-color: var(--primary-color);
-  overflow-x: hidden;
-  overflow-y: scroll;
   -webkit-touch-callout: none; /* iOS Safari */
   -webkit-user-select: none; /* Safari */
   -ms-user-select: none; /* IE 10 and IE 11 */
